Provide extensions resource classes from a single configuration